[project]
name = "wave2d-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "h5py>=3.16.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "streamlit>=1.59.2",
    "tqdm>=4.68.4",
]
